--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "firebase": "^10.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@heroicons/react": "^2.1.1"
+    "@heroicons/react": "^2.1.1",
+    "@google/genai": "^0.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
